axo_gram.output
Terminals unused in grammar

    "#include 'local_file'"
    "or"
    "and"
    "?="
    ":="
    '^'
    TYPE_Q_PREC


Grammar

    0 $accept: code $end

    1 code: declarations
    2     | AXO_EXPR_AS_PARSE_RESULT expr

    3 declarations: %empty
    4             | declarations func_def
    5             | declarations "#include"
    6             | declarations "enum" "identifier" '(' enum_names ')'
    7             | declarations declaration

    8 declaration: struct_def
    9            | func_def_ret_typ func_def_name '(' func_args ')' ';'
   10            | "#provided" val_typ "identifier"
   11            | "use" "identifier"
   12            | "include" "string literal"
   13            | "module" module_info ')'
   14            | "#typ" "identifier"
   15            | "#typ" struct_def
   16            | global_code_scope
   17            | "#source" "string literal"
   18            | "#flag" "string literal"
   19            | c_code
   20            | "identifier" "->" val_typ
   21            | "comptime lua block"

   22 c_code: "#C" "string literal"

   23 global_code_scope_start: '{'

   24 global_code_scope: global_code_scope_start statements '}'

   25 struct_def: "struct" "identifier" '(' func_args ')'

   26 module_info: '('
   27            | module_info "identifier" ':' "string literal"

   28 statements: %empty
   29           | statements statement

   30 index_access: '[' expr
   31             | index_access '|' expr

   32 identifier: "identifier"

   33 incr_decr_op: expr "++"
   34             | expr "--"

   35 comptime_expr: COMPTIME_VAR
   36              | comptime_call_start ')'

   37 comptime_call_start: COMPTIME_CALL
   38                    | COMPTIME_CALL expr
   39                    | comptime_call_start ',' expr

   40 expr: "string literal"
   41     | "integer literal"
   42     | "float literal"
   43     | comptime_expr
   44     | "byte literal"
   45     | "null"
   46     | "identifier" "::" "identifier"
   47     | expr '+' expr
   48     | expr '-' expr
   49     | '-' expr
   50     | expr '*' expr
   51     | expr '/' expr
   52     | expr '%' expr
   53     | '(' expr ')'
   54     | expr '@'
   55     | expr '.'
   56     | assignment
   57     | special_assignment
   58     | identifier
   59     | expr '?' expr ':' expr
   60     | func_call
   61     | expr '<' expr
   62     | expr '>' expr
   63     | expr "==" expr
   64     | expr "!=" expr
   65     | expr ">=" expr
   66     | expr "<=" expr
   67     | expr "||" expr
   68     | '!' expr
   69     | expr "&&" expr
   70     | expr ">>" expr
   71     | expr "<<" expr
   72     | struct_literal
   73     | expr index_access ']'
   74     | expr ".field"
   75     | "sz_of" '(' expr ')'
   76     | "type_sz" '(' val_typ ')'
   77     | "#line"
   78     | "#column"
   79     | "#file"
   80     | arr_literal
   81     | incr_decr_op
   82     | expr '.' '(' val_typ ')'
   83     | '$'

   84 stat_arr_literal_start: arr_lit_start expr ',' expr
   85                       | empty_arr_dims ']' '[' expr ',' expr
   86                       | stat_arr_literal_start ',' expr

   87 arr_lit_start: '['
   88              | '[' '?'

   89 empty_arr_dims: arr_lit_start "integer literal"
   90               | empty_arr_dims '|' "integer literal"

   91 stat_arr_literal: arr_lit_start expr ',' ']'
   92                 | stat_arr_literal_start ']'

   93 arr_literal: stat_arr_literal
   94            | empty_arr_dims ']' val_typ

   95 statement: matching_statement
   96          | non_matching_statement

   97 matching_statement: expr
   98                   | ';'
   99                   | "ret" expr
  100                   | "ret" ';'
  101                   | code_scope
  102                   | expr '=' "none" val_typ
  103                   | "continue"
  104                   | "break"
  105                   | switch_statement
  106                   | "defer" matching_statement
  107                   | type_qualifier identifier '=' expr
  108                   | matching_if_statement
  109                   | matching_for_loop
  110                   | matching_while
  111                   | matching_each_loop

  112 switch_statement_start: "switch" expr

  113 switch_statement: switch_statement_start '{' switch_body '}'

  114 switch_body: switch_branch statement
  115            | switch_body switch_branch statement

  116 switch_branch: switch_case "none" "break"
  117              | switch_case

  118 switch_case: switch_expr_list "case"

  119 switch_expr_list: expr
  120                 | switch_expr_list ',' expr

  121 if_condition: "if" expr

  122 matching_if_statement: if_condition matching_statement "else" matching_statement

  123 non_matching_statement: non_matching_if_statement
  124                       | non_matching_for_loop
  125                       | non_matching_while
  126                       | non_matching_each_loop

  127 non_matching_if_statement: if_condition statement
  128                          | if_condition matching_statement "else" non_matching_statement

  129 till_loop_start: "till" '(' "identifier" '=' expr ')'

  130 while_loop_base: "while" expr

  131 matching_while: while_loop_base matching_statement

  132 non_matching_while: while_loop_base non_matching_statement

  133 for_loop_start: "for"

  134 for_loop_init: for_loop_start statement

  135 for_loop_base: for_loop_init ',' expr ',' statement
  136              | till_loop_start

  137 matching_for_loop: for_loop_base matching_statement

  138 non_matching_for_loop: for_loop_base non_matching_statement

  139 matching_each_loop: each_loop_base matching_statement

  140 non_matching_each_loop: each_loop_base non_matching_statement

  141 each_iter_dims: '[' expr
  142               | '[' '|' expr
  143               | each_iter_dims '|' expr
  144               | each_iter_dims '|'

  145 each_loop_base: for_loop_start identifier "in" expr
  146               | for_loop_start identifier "each" each_iter_dims ']' "in" expr
  147               | for_loop_start "each" each_iter_dims ']' "in" expr

  148 assign_op: '='

  149 assignment: expr assign_op expr

  150 special_assignment: expr "+=" expr
  151                   | expr "-=" expr
  152                   | expr "*=" expr
  153                   | expr "/=" expr
  154                   | expr "%=" expr

  155 arr_multidim_typ: '[' '|'
  156                 | arr_multidim_typ '|'

  157 arr_typ: '[' ']' val_typ
  158        | arr_multidim_typ ']' val_typ

  159 func_typ_start: '(' val_typ "fn"
  160               | '(' "fn"

  161 func_typ_args: func_typ_start val_typ
  162              | func_typ_args ',' val_typ

  163 func_typ: func_typ_start ')'
  164         | func_typ_args ')'

  165 no_q_typ: "identifier"
  166         | '@' val_typ
  167         | "none"
  168         | func_typ
  169         | arr_typ
  170         | '.' '.' '.'

  171 val_typ: no_q_typ
  172        | type_qualifier no_q_typ

  173 type_qualifier: typ_q
  174               | type_qualifier typ_q

  175 typ_q: "const"
  176      | "volatile"

  177 called_expr: expr '('
  178            | expr ':' "identifier" '('

  179 func_call_start: called_expr
  180                | called_expr expr
  181                | func_call_start ',' expr
  182                | func_call_start ','

  183 func_call: func_call_start ')'

  184 code_scope_start: '{'

  185 code_scope: code_scope_start statements '}'

  186 func_def_name: "identifier"
  187              | "identifier" "::" "identifier"
  188              | val_typ ':' "identifier"

  189 func_def_ret_typ: "fn"
  190                 | val_typ "fn"

  191 func_def_start: func_def_ret_typ func_def_name '(' func_args ')'

  192 struct_literal_start: "struct{"
  193                     | "struct{" expr
  194                     | "struct{" "identifier" '=' expr
  195                     | struct_literal_start ',' expr
  196                     | struct_literal_start ','
  197                     | struct_literal_start ',' "identifier" '=' expr

  198 struct_literal: struct_literal_start '}'

  199 func_def: func_def_start code_scope

  200 func_arg: val_typ "identifier"
  201         | "identifier" '=' expr
  202         | val_typ "identifier" '=' expr

  203 func_args: %empty
  204          | func_arg
  205          | func_args ',' func_arg

  206 enum_names: "identifier"
  207           | enum_names ',' "identifier"


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 68
    '$' (36) 83
    '%' (37) 52
    '(' (40) 6 9 25 26 53 75 76 82 129 159 160 177 178 191
    ')' (41) 6 9 13 25 36 53 75 76 82 129 163 164 183 191
    '*' (42) 50
    '+' (43) 47
    ',' (44) 39 84 85 86 91 120 135 162 181 182 195 196 197 205 207
    '-' (45) 48 49
    '.' (46) 55 82 170
    '/' (47) 51
    ':' (58) 27 59 178 188
    ';' (59) 9 98 100
    '<' (60) 61
    '=' (61) 102 107 129 148 194 197 201 202
    '>' (62) 62
    '?' (63) 59 88
    '@' (64) 54 166
    '[' (91) 30 85 87 88 141 142 155 157
    ']' (93) 73 85 91 92 94 146 147 157 158
    '^' (94)
    '{' (123) 23 113 184
    '|' (124) 31 90 142 143 144 155 156
    '}' (125) 24 113 185 198
    error (256)
    "string literal" <str> (258) 12 17 18 22 27 40
    "integer literal" <str> (259) 41 89 90
    "float literal" <str> (260) 42
    "identifier" <str> (261) 6 10 11 14 20 25 27 32 46 129 165 178 186 187 188 194 197 200 201 202 206 207
    "ret" <str> (262) 99 100
    "break" <str> (263) 104 116
    "continue" <str> (264) 103
    "#include 'local_file'" <str> (265)
    "#include" <str> (266) 5
    "#typ" <str> (267) 14 15
    "#provided" <str> (268) 10
    "fn" <str> (269) 159 160 189 190
    "while" <str> (270) 130
    "switch" <str> (271) 112
    "case" <str> (272) 118
    "for" <str> (273) 133
    "each" <str> (274) 146 147
    "in" <str> (275) 145 146 147
    "if" <str> (276) 121
    "else" <str> (277) 122 128
    "==" <str> (278) 63
    "!=" <str> (279) 64
    ">=" <str> (280) 65
    "<=" <str> (281) 66
    "or" <str> (282)
    "and" <str> (283)
    "||" <str> (284) 67
    "&&" <str> (285) 69
    "<<" <str> (286) 71
    ">>" <str> (287) 70
    "till" <str> (288) 129
    "null" <str> (289) 45
    "++" <str> (290) 33
    "--" <str> (291) 34
    "+=" <str> (292) 150
    "-=" <str> (293) 151
    "*=" <str> (294) 152
    "/=" <str> (295) 153
    "%=" <str> (296) 154
    "?=" <str> (297)
    ":=" <str> (298)
    "enum" <str> (299) 6
    "struct" <str> (300) 25
    "use" <str> (301) 11
    "include" <str> (302) 12
    "struct{" <str> (303) 192 193 194
    ".field" <str> (304) 74
    "module" <str> (305) 13
    "->" <str> (306) 20
    "none" <str> (307) 102 116 167
    "byte literal" <str> (308) 44
    "sz_of" <str> (309) 75
    "type_sz" <str> (310) 76
    "defer" <str> (311) 106
    "#line" <str> (312) 77
    "#column" <str> (313) 78
    "#file" <str> (314) 79
    "#flag" <str> (315) 18
    "#source" <str> (316) 17
    "#C" <str> (317) 22
    "const" <str> (318) 175
    "::" <str> (319) 46 187
    "volatile" <str> (320) 176
    COMPTIME_VAR <str> (321) 35
    COMPTIME_CALL <str> (322) 37 38
    AXO_EXPR_AS_PARSE_RESULT <str> (323) 2
    "comptime lua block" <str> (324) 21
    IDENTIFIER_PREC (325)
    EXPR_AS_STATEMENT (326)
    LOOP_PREC (327)
    UMINUS (328)
    CALL_PREC (329)
    STRUCT_LIT_NAMED_FIELD (330)
    TYPE_Q_PREC (331)


Nonterminals, with rules where they appear

    $accept (101)
        on left: 0
    code (102)
        on left: 1 2
        on right: 0
    declarations <str> (103)
        on left: 3 4 5 6 7
        on right: 1 4 5 6 7
    declaration <declaration_type> (104)
        on left: 8 9 10 11 12 13 14 15 16 17 18 19 20 21
        on right: 7
    c_code <str> (105)
        on left: 22
        on right: 19
    global_code_scope_start <scope> (106)
        on left: 23
        on right: 24
    global_code_scope <scope> (107)
        on left: 24
        on right: 16
    struct_def <struct_type> (108)
        on left: 25
        on right: 8 15
    module_info <module_type> (109)
        on left: 26 27
        on right: 13 27
    statements <str> (110)
        on left: 28 29
        on right: 24 29 185
    index_access <index_access_type> (111)
        on left: 30 31
        on right: 31 73
    identifier <identifier_type> (112)
        on left: 32
        on right: 58 107 145 146
    incr_decr_op <expression> (113)
        on left: 33 34
        on right: 81
    comptime_expr <expression> (114)
        on left: 35 36
        on right: 43
    comptime_call_start <comptime_function_call> (115)
        on left: 37 38 39
        on right: 36 39
    expr <expression> (116)
        on left: 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83
        on right: 2 30 31 33 34 38 39 47 48 49 50 51 52 53 54 55 59 61 62 63 64 65 66 67 68 69 70 71 73 74 75 82 84 85 86 91 97 99 102 107 112 119 120 121 129 130 135 141 142 143 145 146 147 149 150 151 152 153 154 177 178 180 181 193 194 195 197 201 202
    stat_arr_literal_start <arr_lit_type> (117)
        on left: 84 85 86
        on right: 86 92
    arr_lit_start <bool_type> (118)
        on left: 87 88
        on right: 84 89 91
    empty_arr_dims <empty_arr_lit_type> (119)
        on left: 89 90
        on right: 85 90 94
    stat_arr_literal <arr_lit_type> (120)
        on left: 91 92
        on right: 93
    arr_literal <expression> (121)
        on left: 93 94
        on right: 80
    statement <statement_type> (122)
        on left: 95 96
        on right: 29 114 115 127 134 135
    matching_statement <statement_type> (123)
        on left: 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111
        on right: 95 106 122 128 131 137 139
    switch_statement_start <switch_type> (124)
        on left: 112
        on right: 113
    switch_statement <switch_type> (125)
        on left: 113
        on right: 105
    switch_body <switch_type> (126)
        on left: 114 115
        on right: 113 115
    switch_branch <case_type> (127)
        on left: 116 117
        on right: 114 115
    switch_case <case_type> (128)
        on left: 118
        on right: 116 117
    switch_expr_list <case_type> (129)
        on left: 119 120
        on right: 118 120
    if_condition <expression> (130)
        on left: 121
        on right: 122 127 128
    matching_if_statement <statement_type> (131)
        on left: 122
        on right: 108
    non_matching_statement <statement_type> (132)
        on left: 123 124 125 126
        on right: 96 128 132 138 140
    non_matching_if_statement <statement_type> (133)
        on left: 127 128
        on right: 123
    till_loop_start <till_loop_type> (134)
        on left: 129
        on right: 136
    while_loop_base <str> (135)
        on left: 130
        on right: 131 132
    matching_while <statement_type> (136)
        on left: 131
        on right: 110
    non_matching_while <statement_type> (137)
        on left: 132
        on right: 125
    for_loop_start <for_loop_type> (138)
        on left: 133
        on right: 134 145 146 147
    for_loop_init <for_loop_type> (139)
        on left: 134
        on right: 135
    for_loop_base <for_loop_type> (140)
        on left: 135 136
        on right: 137 138
    matching_for_loop <statement_type> (141)
        on left: 137
        on right: 109
    non_matching_for_loop <statement_type> (142)
        on left: 138
        on right: 124
    matching_each_loop <statement_type> (143)
        on left: 139
        on right: 111
    non_matching_each_loop <statement_type> (144)
        on left: 140
        on right: 126
    each_iter_dims <each_loop_type> (145)
        on left: 141 142 143 144
        on right: 143 144 146 147
    each_loop_base <each_loop_type> (146)
        on left: 145 146 147
        on right: 139 140
    assign_op (147)
        on left: 148
        on right: 149
    assignment <expression> (148)
        on left: 149
        on right: 56
    special_assignment <expression> (149)
        on left: 150 151 152 153 154
        on right: 57
    arr_multidim_typ <typ_type> (150)
        on left: 155 156
        on right: 156 158
    arr_typ <typ_type> (151)
        on left: 157 158
        on right: 169
    func_typ_start <typ_type> (152)
        on left: 159 160
        on right: 161 163
    func_typ_args <typ_type> (153)
        on left: 161 162
        on right: 162 164
    func_typ <typ_type> (154)
        on left: 163 164
        on right: 168
    no_q_typ <typ_type> (155)
        on left: 165 166 167 168 169 170
        on right: 171 172
    val_typ <typ_type> (156)
        on left: 171 172
        on right: 10 20 76 82 94 102 157 158 159 161 162 166 188 190 200 202
    type_qualifier <typ_type> (157)
        on left: 173 174
        on right: 107 172 174
    typ_q <typ_type> (158)
        on left: 175 176
        on right: 173 174
    called_expr <function_call> (159)
        on left: 177 178
        on right: 179 180
    func_call_start <function_call> (160)
        on left: 179 180 181 182
        on right: 181 182 183
    func_call <function_call> (161)
        on left: 183
        on right: 60
    code_scope_start <scope> (162)
        on left: 184
        on right: 185
    code_scope <scope> (163)
        on left: 185
        on right: 101 199
    func_def_name <function> (164)
        on left: 186 187 188
        on right: 9 191
    func_def_ret_typ <typ_type> (165)
        on left: 189 190
        on right: 9 191
    func_def_start <function> (166)
        on left: 191
        on right: 199
    struct_literal_start <struct_val_type> (167)
        on left: 192 193 194 195 196 197
        on right: 195 196 197 198
    struct_literal <struct_val_type> (168)
        on left: 198
        on right: 72
    func_def <function> (169)
        on left: 199
        on right: 4
    func_arg <function_argument> (170)
        on left: 200 201 202
        on right: 204 205
    func_args <function> (171)
        on left: 203 204 205
        on right: 9 25 191 205
    enum_names <enum_type> (172)
        on left: 206 207
        on right: 6 207


State 0

    0 $accept: . code $end

    AXO_EXPR_AS_PARSE_RESULT  shift, and go to state 1

    $default  reduce using rule 3 (declarations)

    code          go to state 2
    declarations  go to state 3


State 1

    2 code: AXO_EXPR_AS_PARSE_RESULT . expr

    "string literal"   shift, and go to state 4
    "integer literal"  shift, and go to state 5
    "float literal"    shift, and go to state 6
    "identifier"       shift, and go to state 7
    "null"             shift, and go to state 8
    "struct{"          shift, and go to state 9
    "byte literal"     shift, and go to state 10
    "sz_of"            shift, and go to state 11
    "type_sz"          shift, and go to state 12
    "#line"            shift, and go to state 13
    "#column"          shift, and go to state 14
    "#file"            shift, and go to state 15
    COMPTIME_VAR       shift, and go to state 16
    COMPTIME_CALL      shift, and go to state 17
    '$'                shift, and go to state 18
    '-'                shift, and go to state 19
    '!'                shift, and go to state 20
    '('                shift, and go to state 21
    '['                shift, and go to state 22

    identifier              go to state 23
    incr_decr_op            go to state 24
    comptime_expr           go to state 25
    comptime_call_start     go to state 26
    expr                    go to state 27
    stat_arr_literal_start  go to state 28
    arr_lit_start           go to state 29
    empty_arr_dims          go to state 30
    stat_arr_literal        go to state 31
    arr_literal             go to state 32
    assignment              go to state 33
    special_assignment      go to state 34
    called_expr             go to state 35
    func_call_start         go to state 36
    func_call               go to state 37
    struct_literal_start    go to state 38
    struct_literal          go to state 39


State 2

    0 $accept: code . $end

    $end  shift, and go to state 40


State 3

    1 code: declarations .
    4 declarations: declarations . func_def
    5             | declarations . "#include"
    6             | declarations . "enum" "identifier" '(' enum_names ')'
    7             | declarations . declaration

    "identifier"          shift, and go to state 41
    "#include"            shift, and go to state 42
    "#typ"                shift, and go to state 43
    "#provided"           shift, and go to state 44
    "fn"                  shift, and go to state 45
    "enum"                shift, and go to state 46
    "struct"              shift, and go to state 47
    "use"                 shift, and go to state 48
    "include"             shift, and go to state 49
    "module"              shift, and go to state 50
    "none"                shift, and go to state 51
    "#flag"               shift, and go to state 52
    "#source"             shift, and go to state 53
    "#C"                  shift, and go to state 54
    "const"               shift, and go to state 55
    "volatile"            shift, and go to state 56
    "comptime lua block"  shift, and go to state 57
    '.'                   shift, and go to state 58
    '('                   shift, and go to state 59
    '@'                   shift, and go to state 60
    '['                   shift, and go to state 61
    '{'                   shift, and go to state 62

    $default  reduce using rule 1 (code)

    declaration              go to state 63
    c_code                   go to state 64
    global_code_scope_start  go to state 65
    global_code_scope        go to state 66
    struct_def               go to state 67
    arr_multidim_typ         go to state 68
    arr_typ                  go to state 69
    func_typ_start           go to state 70
    func_typ_args            go to state 71
    func_typ                 go to state 72
    no_q_typ                 go to state 73
    val_typ                  go to state 74
    type_qualifier           go to state 75
    typ_q                    go to state 76
    func_def_ret_typ         go to state 77
    func_def_start           go to state 78
    func_def                 go to state 79


State 4

   40 expr: "string literal" .

    $default  reduce using rule 40 (expr)


State 5

   41 expr: "integer literal" .

    $default  reduce using rule 41 (expr)


State 6

   42 expr: "float literal" .

    $default  reduce using rule 42 (expr)


State 7

   32 identifier: "identifier" .
   46 expr: "identifier" . "::" "identifier"

    "::"  shift, and go to state 80

    $default  reduce using rule 32 (identifier)


State 8

   45 expr: "null" .

    $default  reduce using rule 45 (expr)


State 9

  192 struct_literal_start: "struct{" .
  193                     | "struct{" . expr
  194                     | "struct{" . "identifier" '=' expr

    "string literal"   shift, and go to state 4
    "integer literal"  shift, and go to state 5
    "float literal"    shift, and go to state 6
    "identifier"       shift, and go to state 81
    "null"             shift, and go to state 8
    "struct{"          shift, and go to state 9
    "byte literal"     shift, and go to state 10
    "sz_of"            shift, and go to state 11
    "type_sz"          shift, and go to state 12
    "#line"            shift, and go to state 13
    "#column"          shift, and go to state 14
    "#file"            shift, and go to state 15
    COMPTIME_VAR       shift, and go to state 16
    COMPTIME_CALL      shift, and go to state 17
    '$'                shift, and go to state 18
    '-'                shift, and go to state 19
    '!'                shift, and go to state 20
    '('                shift, and go to state 21
    '['                shift, and go to state 22

    $default  reduce using rule 192 (struct_literal_start)

    identifier              go to state 23
    incr_decr_op            go to state 24
    comptime_expr           go to state 25
    comptime_call_start     go to state 26
    expr                    go to state 82
    stat_arr_literal_start  go to state 28
    arr_lit_start           go to state 29
    empty_arr_dims          go to state 30
    stat_arr_literal        go to state 31
    arr_literal             go to state 32
    assignment              go to state 33
    special_assignment      go to state 34
    called_expr             go to state 35
    func_call_start         go to state 36
    func_call               go to state 37
    struct_literal_start    go to state 38
    struct_literal          go to state 39


State 10

   44 expr: "byte literal" .

    $default  reduce using rule 44 (expr)


State 11

   75 expr: "sz_of" . '(' expr ')'

    '('  shift, and go to state 83


State 12

   76 expr: "type_sz" . '(' val_typ ')'

    '('  shift, and go to state 84


State 13

   77 expr: "#line" .

    $default  reduce using rule 77 (expr)


State 14

   78 expr: "#column" .

    $default  reduce using rule 78 (expr)


State 15

   79 expr: "#file" .

    $default  reduce using rule 79 (expr)


State 16

   35 comptime_expr: COMPTIME_VAR .

    $default  reduce using rule 35 (comptime_expr)


State 17

   37 comptime_call_start: COMPTIME_CALL .
   38                    | COMPTIME_CALL . expr

    "string literal"   shift, and go to state 4
    "integer literal"  shift, and go to state 5
    "float literal"    shift, and go to state 6
    "identifier"       shift, and go to state 7
    "null"             shift, and go to state 8
    "struct{"          shift, and go to state 9
    "byte literal"     shift, and go to state 10
    "sz_of"            shift, and go to state 11
    "type_sz"          shift, and go to state 12
    "#line"            shift, and go to state 13
    "#column"          shift, and go to state 14
    "#file"            shift, and go to state 15
    COMPTIME_VAR       shift, and go to state 16
    COMPTIME_CALL      shift, and go to state 17
    '$'                shift, and go to state 18
    '-'                shift, and go to state 19
    '!'                shift, and go to state 20
    '('                shift, and go to state 21
    '['                shift, and go to state 22

    $default  reduce using rule 37 (comptime_call_start)

    identifier              go to state 23
    incr_decr_op            go to state 24
    comptime_expr           go to state 25
    comptime_call_start     go to state 26
    expr                    go to state 85
    stat_arr_literal_start  go to state 28
    arr_lit_start           go to state 29
    empty_arr_dims          go to state 30
    stat_arr_literal        go to state 31
    arr_literal             go to state 32
    assignment              go to state 33
    special_assignment      go to state 34
    called_expr             go to state 35
    func_call_start         go to state 36
    func_call               go to state 37
    struct_literal_start    go to state 38
    struct_literal          go to state 39


State 18

   83 expr: '$' .

    $default  reduce using rule 83 (expr)


State 19

   49 expr: '-' . expr

    "string literal"   shift, and go to state 4
    "integer literal"  shift, and go to state 5
    "float literal"    shift, and go to state 6
    "identifier"       shift, and go to state 7
    "null"             shift, and go to state 8
    "struct{"          shift, and go to state 9
    "byte literal"     shift, and go to state 10
    "sz_of"            shift, and go to state 11
    "type_sz"          shift, and go to state 12
    "#line"            shift, and go to state 13
    "#column"          shift, and go to state 14
    "#file"            shift, and go to state 15
    COMPTIME_VAR       shift, and go to state 16
    COMPTIME_CALL      shift, and go to state 17
    '$'                shift, and go to state 18
    '-'                shift, and go to state 19
    '!'                shift, and go to state 20
    '('                shift, and go to state 21
    '['                shift, and go to state 22

    identifier              go to state 23
    incr_decr_op            go to state 24
    comptime_expr           go to state 25
    comptime_call_start     go to state 26
    expr                    go to state 86
    stat_arr_literal_start  go to state 28
    arr_lit_start           go to state 29
    empty_arr_dims          go to state 30
    stat_arr_literal        go to state 31
    arr_literal             go to state 32
    assignment              go to state 33
    special_assignment      go to state 34
    called_expr             go to state 35
    func_call_start         go to state 36
    func_call               go to state 37
    struct_literal_start    go to state 38
    struct_literal          go to state 39


State 20

   68 expr: '!' . expr

    "string literal"   shift, and go to state 4
    "integer literal"  shift, and go to state 5
    "float literal"    shift, and go to state 6
    "identifier"       shift, and go to state 7
    "null"             shift, and go to state 8
    "struct{"          shift, and go to state 9
    "byte literal"     shift, and go to state 10
    "sz_of"            shift, and go to state 11
    "type_sz"          shift, and go to state 12
    "#line"            shift, and go to state 13
    "#column"          shift, and go to state 14
    "#file"            shift, and go to state 15
    COMPTIME_VAR       shift, and go to state 16
    COMPTIME_CALL      shift, and go to state 17
    '$'                shift, and go to state 18
    '-'                shift, and go to state 19
    '!'                shift, and go to state 20
    '('                shift, and go to state 21
    '['                shift, and go to state 22

    identifier              go to state 23
    incr_decr_op            go to state 24
    comptime_expr           go to state 25
    comptime_call_start     go to state 26
    expr                    go to state 87
    stat_arr_literal_start  go to state 28
    arr_lit_start           go to state 29
    empty_arr_dims          go to state 30
    stat_arr_literal        go to state 31
    arr_literal             go to state 32
    assignment              go to state 33
    special_assignment      go to state 34
    called_expr             go to state 35
    func_call_start         go to state 36
    func_call               go to state 37
    struct_literal_start    go to state 38
    struct_literal          go to state 39


State 21

   53 expr: '(' . expr ')'

    "string literal"   shift, and go to state 4
    "integer literal"  shift, and go to state 5
    "float literal"    shift, and go to state 6
    "identifier"       shift, and go to state 7
    "null"             shift, and go to state 8
    "struct{"          shift, and go to state 9
    "byte literal"     shift, and go to state 10
    "sz_of"            shift, and go to state 11
    "type_sz"          shift, and go to state 12
    "#line"            shift, and go to state 13
    "#column"          shift, and go to state 14
    "#file"            shift, and go to state 15
    COMPTIME_VAR       shift, and go to state 16
    COMPTIME_CALL      shift, and go to state 17
    '$'                shift, and go to state 18
    '-'                shift, and go to state 19
    '!'                shift, and go to state 20
    '('                shift, and go to state 21
    '['                shift, and go to state 22

    identifier              go to state 23
    incr_decr_op            go to state 24
    comptime_expr           go to state 25
    comptime_call_start     go to state 26
    expr                    go to state 88
    stat_arr_literal_start  go to state 28
    arr_lit_start           go to state 29
    empty_arr_dims          go to state 30
    stat_arr_literal        go to state 31
    arr_literal             go to state 32
    assignment              go to state 33
    special_assignment      go to state 34
    called_expr             go to state 35
    func_call_start         go to state 36
    func_call               go to state 37
    struct_literal_start    go to state 38
    struct_literal          go to state 39


State 22

   87 arr_lit_start: '[' .
   88              | '[' . '?'

    '?'  shift, and go to state 89

    $default  reduce using rule 87 (arr_lit_start)


State 23

   58 expr: identifier .

    $default  reduce using rule 58 (expr)


State 24

   81 expr: incr_decr_op .

    $default  reduce using rule 81 (expr)


State 25

   43 expr: comptime_expr .

    $default  reduce using rule 43 (expr)


State 26

   36 comptime_expr: comptime_call_start . ')'
   39 comptime_call_start: comptime_call_start . ',' expr

    ')'  shift, and go to state 90
    ','  shift, and go to state 91


State 27

    2 code: AXO_EXPR_AS_PARSE_RESULT expr .
   33 incr_decr_op: expr . "++"
   34             | expr . "--"
   47 expr: expr . '+' expr
   48     | expr . '-' expr
   50     | expr . '*' expr
   51     | expr . '/' expr
   52     | expr . '%' expr
   54     | expr . '@'
   55     | expr . '.'
   59     | expr . '?' expr ':' expr
   61     | expr . '<' expr
   62     | expr . '>' expr
   63     | expr . "==" expr
   64     | expr . "!=" expr
   65     | expr . ">=" expr
   66     | expr . "<=" expr
   67     | expr . "||" expr
   69     | expr . "&&" expr
   70     | expr . ">>" expr
   71     | expr . "<<" expr
   73     | expr . index_access ']'
   74     | expr . ".field"
   82     | expr . '.' '(' val_typ ')'
  149 assignment: expr . assign_op expr
  150 special_assignment: expr . "+=" expr
  151                   | expr . "-=" expr
  152                   | expr . "*=" expr
  153                   | expr . "/=" expr
  154                   | expr . "%=" expr
  177 called_expr: expr . '('
  178            | expr . ':' "identifier" '('

    "=="      shift, and go to state 92
    "!="      shift, and go to state 93
    ">="      shift, and go to state 94
    "<="      shift, and go to state 95
    "||"      shift, and go to state 96
    "&&"      shift, and go to state 97
    "<<"      shift, and go to state 98
    ">>"      shift, and go to state 99
    "++"      shift, and go to state 100
    "--"      shift, and go to state 101
    "+="      shift, and go to state 102
    "-="      shift, and go to state 103
    "*="      shift, and go to state 104
    "/="      shift, and go to state 105
    "%="      shift, and go to state 106
    ".field"  shift, and go to state 107
    '='       shift, and go to state 108
    '?'       shift, and go to state 109
    '<'       shift, and go to state 110
    '>'       shift, and go to state 111
    '+'       shift, and go to state 112
    '-'       shift, and go to state 113
    '*'       shift, and go to state 114
    '/'       shift, and go to state 115
    '%'       shift, and go to state 116
    '.'       shift, and go to state 117
    '('       shift, and go to state 118
    ':'       shift, and go to state 119
    '@'       shift, and go to state 120
    '['       shift, and go to state 121

    $default  reduce using rule 2 (code)

    index_access  go to state 122
    assign_op     go to state 123


State 28

   86 stat_arr_literal_start: stat_arr_literal_start . ',' expr
   92 stat_arr_literal: stat_arr_literal_start . ']'

    ','  shift, and go to state 124
    ']'  shift, and go to state 125


State 29

   84 stat_arr_literal_start: arr_lit_start . expr ',' expr
   89 empty_arr_dims: arr_lit_start . "integer literal"
   91 stat_arr_literal: arr_lit_start . expr ',' ']'

    "string literal"   shift, and go to state 4
    "integer literal"  shift, and go to state 126
    "float literal"    shift, and go to state 6
    "identifier"       shift, and go to state 7
    "null"             shift, and go to state 8
    "struct{"          shift, and go to state 9
    "byte literal"     shift, and go to state 10
    "sz_of"            shift, and go to state 11
    "type_sz"          shift, and go to state 12
    "#line"            shift, and go to state 13
    "#column"          shift, and go to state 14
    "#file"            shift, and go to state 15
    COMPTIME_VAR       shift, and go to state 16
    COMPTIME_CALL      shift, and go to state 17
    '$'                shift, and go to state 18
    '-'                shift, and go to state 19
    '!'                shift, and go to state 20
    '('                shift, and go to state 21
    '['                shift, and go to state 22

    identifier              go to state 23
    incr_decr_op            go to state 24
    comptime_expr           go to state 25
    comptime_call_start     go to state 26
    expr                    go to state 127
    stat_arr_literal_start  go to state 28
    arr_lit_start           go to state 29
    empty_arr_dims          go to state 30
    stat_arr_literal        go to state 31
    arr_literal             go to state 32
    assignment              go to state 33
    special_assignment      go to state 34
    called_expr             go to state 35
    func_call_start         go to state 36
    func_call               go to state 37
    struct_literal_start    go to state 38
    struct_literal          go to state 39


State 30

   85 stat_arr_literal_start: empty_arr_dims . ']' '[' expr ',' expr
   90 empty_arr_dims: empty_arr_dims . '|' "integer literal"
   94 arr_literal: empty_arr_dims . ']' val_typ

    '|'  shift, and go to state 128
    ']'  shift, and go to state 129


State 31

   93 arr_literal: stat_arr_literal .

    $default  reduce using rule 93 (arr_literal)


State 32

   80 expr: arr_literal .

    $default  reduce using rule 80 (expr)


State 33

   56 expr: assignment .

    $default  reduce using rule 56 (expr)


State 34

   57 expr: special_assignment .

    $default  reduce using rule 57 (expr)

